--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "5.9.3",
     "react": "16.13.1",
     "react-native": "0.63.4",
-    "react-native-svg": "^12.1.0"
+    "react-native-gesture-handler": "1.10.1",
+    "react-native-reanimated": "1.13.2",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "2.17.1",
+    "react-native-svg": "12.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
@@ -22,7 +28,7 @@
     "eslint": "7.17.0",
     "jest": "26.6.3",
     "metro-react-native-babel-preset": "0.64.0",
-    "react-native-svg-transformer": "^0.14.3",
+    "react-native-svg-transformer": "0.14.3",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
