--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "firebase": "8.7.1",
     "react": "16.13.1",
     "react-native": "0.63.4",
-    "react-native-flash-message": "^0.1.23",
+    "react-native-flash-message": "0.1.23",
     "react-native-gesture-handler": "1.10.2",
+    "react-native-image-picker": "4.0.5",
     "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "2.17.1",
