--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.15.5",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/bottom-tabs": "5.11.8",
     "@react-navigation/native": "5.9.3",
     "@react-navigation/stack": "5.14.3",
     "firebase": "8.7.1",
